--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/.bin/webpack --config=webpack.config.js --progress"
+    "build": "node_modules/.bin/webpack --config=webpack.config.js --progress --display-error-details"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,11 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^1.16.2"
   }
