--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/.bin/webpack --config=webpack.config.js --progress --display-error-details"
+    "build": "node_modules/.bin/webpack --config=webpack.config.js --progress"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,9 @@
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "eslint": "^3.14.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-react": "^6.9.0",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^1.16.2"
   }
