--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/.bin/webpack --config=webpack.config.js --progress",
-    "dev": "node_modules/.bin/webpack-dev-server --config=webpack.config.js --progress --inline --hot --display-error-details"
+    "build": "./node_modules/.bin/webpack --config=webpack.config.js --progress",
+    "dev": "./node_modules/.bin/webpack-dev-server --config=webpack.config.js --progress --inline --hot --display-error-details --port 9090"
   },
   "repository": {
     "type": "git",
