--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-css-modules": "^4.1.0",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
@@ -38,6 +39,7 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.22.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.0",
     "eslint-loader": "^1.6.1",
