--- a/front/package.json
+++ b/front/package.json
@@ -27,7 +27,9 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
@@ -43,8 +45,10 @@
     "eslint": "^3.14.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.9.0",
+    "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
+    "imports-loader": "^0.7.1",
     "isomorphic-style-loader": "^1.1.0",
     "open-browser-webpack-plugin": "0.0.3",
     "postcss-loader": "^1.2.2",
